# Constraint-Lattice

./: .dockerignore  .dockerignore.bak  .dockerignore.bak.bak  .env.bak  .gitignore  .pre-commit-config.yaml  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  LICENSE-MAP.md  LICENSE_MAP.md  LICENSE_OVERVIEW.txt  Makefile  README.md  SPDX-License-Identifier: MIT  add_license_headers.py  advanced_llm_pipeline.py  check_license_headers.py  clean_old_headers.py  cli.py  compose.yaml  constraint_lattice_core.py  constraint_test.py  constraints.yaml  docker-compose.yml  frontend:consumer.css  frontend:consumer.html  frontend:enterprise.css  frontend:enterprise.html  frontend:enterprise.js  frontend:tests:ui.test.js  jest.config.js   llm_pipeline_simulation.py  multimodal.py  package-lock.json .json  package.json  policy_dsl.py  pyproject.toml  (+10 more)
.hypothesis/: llm_pipeline_simulation.py
VarkielAgent-main/: .flake8  CLA.md  README.md
WildCore-main/: README.md  main.py
api/: .license  main.py
billing/: .license
clattice/: .license  integration_hub.py
config/: constraints.yaml
constraints/: __init__.py
dashboard/: metadata.json
deployment/: Makefile  cloudbuild.yaml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.distroless
docs/: LICENSE  LICENSE-MAP.md  advanced_schemas_and_operations.md  cognitive_integration_loop.md  containment_autolearning.md  formal_language_approach.md  hybrid_deployment_strategy.md  index.md  phi2_integration_proposal.md  principles.md  synthetic_cognitive_evolution.md  transformers_gemma_example.md  tutorial.md  (+2 more)
saas/: .license  (+6 more)
src/api/varkiel_agent-main/: pyproject.toml  requirements.txt  setup.py
src/api/varkiel_agent-main/.hypothesis/examples/04e6b3400353b141/: 667374bcd113c160  dd0517b9c072d4eb
src/api/varkiel_agent-main/.hypothesis/examples/6c639efd532c6a59/: 4ea1b1a3193a4834
src/api/varkiel_agent-main/.hypothesis/examples/dd0517b9c072d4eb/: 5ce9d921212c271b  8cfafe88b6ea4207  9844ccdbd8cfec42  cdc818485ec2f2f3
src/api/varkiel_agent-main/docs/adr/: 0001-template.md
src/api/varkiel_agent-main/src/varkiel/: app.py  audit_logger.py  benchmark.py  central_controller.py  coherence_ethics.py  coherence_monitor.py  constraint_lattice_adapter.py  demo.py  embedding.py  exceptions.py  godel_metric.py  introspective_layer.py  logger.py  main.py  memory_stream.py  minimal_varkiel.py  phenomenological_tracker.py  risk_balancer.py  semantic_resonance.py  state_manager.py  state_vector.py  structural_constraint_engine.py  symbolic_articulator.py  symbolic_coherence_engine.py  symbolic_interpreter.py  test_core.py  utils.py
src/api/varkiel_agent-main/src/varkiel/tests/: test_constraint_vectors.py  test_paradoxes.py
src/api/varkiel_agent-main/static/: main.js
src/api/varkiel_agent-main/templates/: admin.html  index.html  login.html
(+422 files in other folders)
